--- a/react/click-counter/src/App.css
+++ b/react/click-counter/src/App.css
@@ -9,7 +9,7 @@ body {
   background-color: #1b1b32;
 }
 
-.App {
+.app {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -18,7 +18,7 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.React-logo-container {
+.react-logo-container {
   width: 100%;
   display: flex;
   align-items: center;
@@ -27,5 +27,17 @@ body {
 }
 
 .React-logo {
-  width: 10%;
+  position: relative;
+  bottom: -120px;
+  width: 200px;
+}
+
+.click-counter-container{
+  height: 550px;
+  min-width: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
