add Clear Button

--- a/react/calculator/src/components/Button/Button.css
+++ b/react/calculator/src/components/Button/Button.css
@@ -28,3 +28,11 @@
 .operator:hover {
     background-color: #ff6600;
 }
+
+.clear {
+    background-color: #ac0246;
+}
+
+.clear:hover {
+    background-color: #ebb000;
+}
