--- a/react/calculator/src/components/Calculator/Calculator.css
+++ b/react/calculator/src/components/Calculator/Calculator.css
@@ -1,6 +1,6 @@
 .calculator-container {
   width: 400px;
-  height: 600px;
+  min-height: 600px;
   padding: 14px;
   background-color: #99c9ff;
   border-radius: 20px;
