--- a/go/snippetbox/ui/html/base.tmpl
+++ b/go/snippetbox/ui/html/base.tmpl
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>{{template "title" .}} - Snippetbox</title>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700'>
 </head>
 <body>
     <header>
@@ -14,6 +17,7 @@
         {{template "main" .}}
     </main>
     <footer>Powered by <a href="https://go.dev/">Go</a></footer>
+    <script type="text/javascript" src="/static/js/main.js"></script>
 </body>
 </html>
 {{end}}
